# datialogpy

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements-build.txt  setup_cython.py  setup_wheel.py
.github/workflows/: build_and_publish.yml
datialog/: __init__.py  cli.py  launcher.py
datialog.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
datialog/static/: index.html
src/: license_manager.py  server.py
